# 3djax

./: README.md  pyproject.toml
src/3djax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/3djax/bch/: bch_decode.py  bch_encode.py  test_bch.py
src/3djax/channel/: channel_200G_hard.py  channel_refdisres.py  readme.txt
src/3djax/channel/docs/: readme.txt
src/3djax/dsp_core/: a_phase_interp.py  adc.py  agc.py  analog_front_end.py  bcjr_decoder.py  channel_200G_hard.py  channel_estimator.py  dsp_config.yaml  dsp_receiver.py  ffe.py  frequency_synthesizer.py  mmse_sir.py  phase_detector.py  pipeline.py  receiver_analog_front_end.py  rx_afe.py  rx_gains.py  test_dsp_core.py  timing.py  transmitter.py  transmitter_pam4.py  trasmitter_qam.py
src/3djax/fec/ldpc/: ldpc56_decode.py
src/3djax/ldpc/: ldpc56_encode.py  ldpc_prototype_matrix.py  qpsk.py  test_ldpc.py
src/3djax/tests/: main_exploration.py  qam16x.yaml  qam16x_ideal.yaml  sim_tx.py  test_dsp_core.py  test_qam16x.py
src/3djax/utils/: bessel.py  diagnostics.py  dsp_gui.py  dsp_probe.py  fft_convolve_same.py  phosphor_engine.py  plot_sig.py  prbs7.py  qam_mapper.py
