[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "3djax"
version = "0.1.0"
description = "3DJAX: Explorations of a 400Gbps lane."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Felix Bors", email = "felix.bors@aibcore.com" }
]


dependencies = [
    # JAX with CUDA 12 support.
    "jax[cuda12]>=0.4.30",
    "equinox",
    # Core numerical processing
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    # Logging and config
    "PyYAML",
    # Basic static plotting (if you still need simple offline graphs)
    "matplotlib>=3.8.0",
    "scikit-dimension",
    "pandas",
    # The Hardware-Accelerated Visualization Engine
    "eyemon @ git+https://github.com/efbors/eyemon.git",
]

[tool.setuptools.packages.find]
where = ["src"]